# djangocms-export-page

./: CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
blogapp/: models.py
djangocms_export_page/: cms_toolbars.py  mixins.py  urls.py
djangocms_export_page/export/: common.py
docs/: conf.py  index.rst  quickstart.rst
reports/: coverage-py36-django20.xml  junit.xml
testapp/: models.py  settings.py  settings.py-tpl  urls.py
testapp/templates/: blog.html
tests/: factories.py  test_models.py  test_pages.py
tests/templates/: test.html
